# azure-functions-parser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
azure/functions_parser/: __init__.py
tests/: test_validate_request.py
